src/objects/SecurityLocationGuide__c.object
<CustomObject>
    <fields>
        <fullName>Postcode_Category__c</fullName>
        <label>Postcode Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lender</label>
        <referenceTo>acfBank_Detail__c</referenceTo>
        <relationshipLabel>Security Location Guide</relationshipLabel>
        <relationshipName>SecurityLocationGuide</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>postcodeFrom__c</fullName>
        <label>Postcode From</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>postcodeTo__c</fullName>
        <label>Postcode To</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Security Location Guide</relationshipLabel>
        <relationshipName>securityLocationGuide</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Security Location Guide</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>lender__c</columns>
        <columns>Postcode_Category__c</columns>
        <columns>postcodeFrom__c</columns>
        <columns>postcodeTo__c</columns>
        <columns>priority__c</columns>
        <columns>state__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Security Location Guide Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Location Guide</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>